# dtc-editor

./: .gitignore  102125 - MEC White Paper - final draft (10).docx  DTC_Technical_Document_Template_20260112 copy.docx  README.md  RUN_ME_FIRST.md  VPP Paper Will Edits.docx  app.py  pyproject.toml  setup_mac.sh
demo_output/sample_document_20260113_231657Z/: sample_document.changelog.json  sample_document.changelog.txt  sample_document.clean.docx  sample_document.original.docx
docs/: ARCHITECTURE.md  ARCHITECTURE_HOLISTIC.md  DTC_STYLE_RULES.md  SURGICAL_PIPELINE_ENHANCEMENT_PROPOSAL.md
dtc_editor/: __init__.py  apply.py  changelog.py  cli.py  editops.py  ir.py  lint.py  persnicketybot.py  pipeline.py  propose.py  redline.py  style_polish.py  verify.py
dtc_editor/adapters/: document_restructure.py  docx_adapter.py  figure_captions.py  google_adapter.py  template_reconstruct.py  vale_adapter.py  vale_substitutions.py
dtc_editor/gui/: __init__.py  app.py
dtc_editor/holistic/: __init__.py  acronyms.py  chunker.py  orchestrator.py  prompts.py  rewriter.py  validator.py
dtc_editor/llm/: __init__.py  client.py  prompts.py  propose_llm.py  rewrite_holistic.py
dtc_editor/rules/: dtc_rules.yml  load_rules.py  prose_rules.yml  protected_terms.yml  surgical_rules_manifest.yml
dtc_editor/surgical/: __init__.py  acronym_expander.py  capitalization_checker.py  chapter_numberer.py  figure_table_processor.py  integration.py  pipeline.py
rules/: protected_terms.yml
rules/vale/: .vale.holistic.ini  (+2 more)
tests/: test_editops_spans.py  test_persnickety_capabilities.py
(+71 files in other folders)
