[project]
name = "dtc-editor"
version = "0.3.0"
description = "DTC Editorial Engine: AI-powered document editing with style enforcement"
requires-python = ">=3.10"
dependencies = [
  "python-docx>=1.1.0",
  "pyyaml>=6.0.0",
  "anthropic>=0.18.0",
  "streamlit>=1.30.0",
]

[project.optional-dependencies]
google = ["google-api-python-client>=2.100.0", "google-auth>=2.25.0"]

[project.scripts]
dtc-edit = "dtc_editor.cli:main"
dtc-edit-gui = "dtc_editor.gui:launch_gui"

[tool.setuptools.packages.find]
include = ["dtc_editor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
